# medical_guidelines

./: README.md  pyproject.toml
assets/esge/: 10_1055_a_0588_5365.md  10_1055_a_0759_1629.md  10_1055_a_0822_0832.md  10_1055_a_0831_2522.md  10_1055_a_0859_1883.md  10_1055_a_0862_0346.md  10_1055_a_0959_0505.md  10_1055_a_1075_4080.md  10_1055_a_1171_3174.md  10_1055_a_1185_3109.md  10_1055_s_0030_1256754.md  10_1055_s_0033_1344142.md  10_1055_s_0042_102652.md  example.md
scripts/: build_catalog.py  build_fulltext_index.py  build_index.py  ocr.py
src/medical_guidelines/: catalog.py  esge.py  fulltext.py  index.py  utility.py
src/medical_guidelines/assets/: index.json
src/medical_guidelines/assets/esge/: 10_1055_2023_a_2133_3365.md  10_1055_a_0659_9864.md  10_1055_a_0831_2522.md  10_1055_a_0965_0605.md  10_1055_a_1016_4977.md  10_1055_a_1031_7657.md  10_1055_a_1160_5549.md  10_1055_s_0030_1256754.md  10_1055_s_0042_102652.md
src/medical_guidelines/llm/: tool.py
